--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
         "mongoose": "^6.2.10",
         "noty": "^3.2.0-beta-deprecated",
         "passport": "0.4.1",
-        "passport-local": "^1.0.0"
+        "passport-local": "^1.0.0",
+        "socket.io": "^4.4.1"
     },
     "devDependencies": {
         "laravel-mix": "^6.0.43",
